# exohelp

./: .pre-commit-config.yaml  CITATION.cff  README.md  conftest.py  pyproject.toml
.github/workflows/: format_and_test.yml  publish.yml
src/exohelp/: __init__.py  body.py  constants.py  general.py  kepler.py  tsm.py  type.py  units.py
src/exohelp/archive/: __init__.py  confirmed_exoplanet_loader.py
src/exohelp/planet/: __init__.py  properties.py  rv.py  spectroscopy.py  summary.py  transit.py
src/exohelp/rv/: mass.py
src/exohelp/star/: __init__.py  activity.py  properties.py  spectroscopy.py
tests/: test_kepler.py  test_planet_summary.py
