[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exohelp"
authors = [
    {name = "David Degen", email = "ddegen@ethz.ch"},
]
description = "A collection of tools for exoplanetary and stellar astrophysics."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["astronomy", "astrophysics", "exoplanets", "stars", "planets"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "pandas",
    "matplotlib",
]
version = '0.1.0'


[project.optional-dependencies]
dev = [
    "ruff",
]
test = [
    "pytest",
]

[project.urls]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
lint.extend-select = [
    "C4",
    "SIM",
    "NPY",
    ""PD",
    "N",
    "RUF",
]
