[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm", "wheel"]

[project]
authors = [
  {email = "ddegen@ethz.ch", name = "David Degen"}
]
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
  "astropy",
  "pandas",
  "matplotlib"
]
description = "A collection of tools for exoplanetary and stellar astrophysics."
keywords = ["astronomy", "astrophysics", "exoplanets", "stars", "planets"]
license = {text = "MIT"}
name = "exohelp"
readme = "README.md"
requires-python = ">=3.10"
version = '0.1.0'

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit"
]
test = [
  "pytest"
]

[project.urls]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-ignore = [
  "PD901"
]
extend-select = [
  "C4",
  "SIM",
  "NPY",
  "PD",
  "N",
  "RUF"
]

[tool.setuptools.packages.find]
where = ["src"]
