[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.2,<0.12"]

[dependency-groups]
archive = [
  "httpx>=0.28.1",
  "pandas>=2.3.3"
]
dev = [
  {include-group = "test"},
  "pre-commit>=4.5.1",
  "ruff>=0.14.11"
]
test = [
  "pandas>=2.0",
  "pytest>=9.0.2"
]

[project]
authors = [
  {email = "ddegen@ethz.ch", name = "David Degen"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "astropy>=7.2.0",
  "numpy>=2.4.1"
]
description = "A collection of tools for exoplanetary and stellar astrophysics."
keywords = ["astronomy", "astrophysics", "exoplanets", "stars", "planets"]
license = {text = "MIT"}
name = "exohelp"
readme = "README.md"
requires-python = ">=3.11"
version = '0.1.2'

[project.urls]
"Bug Tracker" = "https://github.com/dgegen/exohelp/issues"
"Homepage" = "https://github.com/dgegen/exohelp"
"Source" = "https://github.com/dgegen/exohelp"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-ignore = [
  "PD901"
]
extend-select = [
  "C4",
  "SIM",
  "NPY",
  "PD",
  "N",
  "RUF"
]
